# fastapi-agent-demo

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_items.py
app/: main.py
app/api/: health.py
app/core/: config.py
app/db/: session.py
app/models/: item.py
tests/: test_health.py
