[project]
name = "fastapi-agent-demo"
version = "0.1.0"
description = "Production-style FastAPI service template"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.118.0",
  "uvicorn==0.37.0",
  "sqlalchemy==2.0.43",
  "psycopg[binary]==3.2.10",
  "alembic==1.16.5",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
